--- a/index.html
+++ b/index.html
@@ -669,10 +669,10 @@ function webGLStart()
    canvas.ontouchmove = function (ev)
    {
       if (move==0) return;
-      var touch = e.touches[0];
+      var touch = ev.touches[0];
       //  Update angles
-      ph -= touch..clientX-x0;
-      th += touch..clientY-y0;
+      ph -= touch.clientX-x0;
+      th += touch.clientY-y0;
       //  Store location
       x0 = touch.clientX;
       y0 = touch.clientY;
