--- a/index.html
+++ b/index.html
@@ -668,10 +668,10 @@ function webGLStart()
    }
    canvas.ontouchmove = function (ev)
    {
-      console.log('foo')
+      console.log('foo');
       if (move==0) return;
       var touch = ev.touches[0];
-      console.log('bar')
+      console.log('bar');
       //  Update angles
       ph -= touch.clientX-x0;
       th += touch.clientY-y0;
@@ -679,6 +679,7 @@ function webGLStart()
       x0 = touch.clientX;
       y0 = touch.clientY;
       //  Redisplay
+      console.log('baz');
       Display();
    }
 
